# template_python_project

./: .pre-commit-config.yaml  404.html  LICENSE  README.md  hello.py  index.html  mkdocs.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yaml  interrogate.yaml  lint.yaml  pytest.yaml  ruff.yaml  tests.yaml
search/: search_index.json
src/: hello.py
stylesheets/: extra.css
