[project]
name = "template-python-project"
version = "0.1.0"
description = "Esse repositório foi criado com o propósito de servir como um template de um projeto Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.5",
]

[tool.uv]
dev-dependencies = [
    "interrogate>=1.7.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.35",
    "mkdocstrings-python>=1.11.1",
    "mkdocstrings>=0.26.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
]
