[project]
name = "template-python-project"
version = "0.1.0"
description = "Esse repositório foi criado com o propósito de servir como um template de um projeto Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.5",
    "taskipy>=1.13.0",
]

[tool.uv]
dev-dependencies = [
    "interrogate>=1.7.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.35",
    "mkdocstrings-python>=1.11.1",
    "mkdocstrings>=0.26.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
exclude = ["setup.py", "docs", "build", "bitbucket", "test", "*exceptions.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "docs/assets/"
badge-format = "svg"

[tool.taskipy.tasks]
docs = 'mkdocs serve'
format = 'ruff check . --fix && ruff format .'
interrogate = 'interrogate -vv'
lint = 'ruff check . && ruff check . --diff'
pre-commit = 'pre-commit run'
test = 'pytest -vv'
